--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,19 @@
   padding: 4rem 2rem;
 }
 
+.projects a {
+  color: white;
+  background-color: #4d4d4d; 
+  padding: 0.5em 1em;
+  border-radius: 5px;
+}
+.projects a:hover {
+  color: white;
+  background-color: #11c3e2; 
+  padding: 0.5em;
+  border-radius: 5px;
+}
+
 .projects h2 {
   font-size: 2.5rem;
   margin-bottom: 2rem;
